external/skia/UnpackedTarball_skia.mk
@@ -33,7 +33,7 @@ skia_patches := \
     windows-libraries-system32.patch.1 \
     allow-no-es2restrictions.patch.1 \
     vk_mem_alloc.patch.1 \
-    tdf147342.patch.0 \
+    macosmetal.patch.0 \
     redefinition-of-op.patch.0 \
     0001-Added-missing-include-cstdio.patch \
     fix-SkDebugf-link-error.patch.1 \
